agrega botón garbage y da estilo al boxOrder

--- a/burger-queen-project/src/styles/boxBurgerDance.module.css
+++ b/burger-queen-project/src/styles/boxBurgerDance.module.css
@@ -1,13 +1,10 @@
 /*Component box of burger dancing*/
-.burgerBox{
-    background: rgba(197, 218, 176, 0.5);
-    overflow-y: scroll;
-    height: 300px;
+.burgerBoxDancing{
     display: flex;
     flex-direction: column;
     margin-left: 0;
     width: 100%;
-    height: 400px;
+    height: 100%;
 }
 .NavigationMenunav{
     display: flex;
