--- a/burger-queen-project/src/styles/viewAllFood.module.css
+++ b/burger-queen-project/src/styles/viewAllFood.module.css
@@ -5,6 +5,7 @@
         gap: 2%;
         margin-top: 5%;
         padding: 10px;
+        justify-content: space-around;
     }
     
     .content {
@@ -24,7 +25,6 @@
     }
     
     .product {
-        /* width: 80px;      */
         justify-content: center;
     }
     
@@ -40,7 +40,7 @@
     font-size: 28px;
     font-weight: 700;
     border-radius: 10px;
-    width: 60px;
+    width: 50px;
     height: 40px;
     justify-content: center;
     align-items: center;
@@ -61,10 +61,20 @@
         margin: 0px;
     }
     .counter{
+        display: flex;
+        align-items: center;
         background-color: white;
         border-radius: 10px;
         height: 2.5rem;
-        width: 2.5rem;
+        width: 3rem;
         justify-content: center;
-        align-items: center;
     }
+    .countertd {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+      }
+      .trTotal td {
+        background-color: var(--button-cancel-border);
+        border-radius: 10px;
+      }
